:sparkles: The clipped transparent-sally is fixed and the mobile nav is ready for testing
The clipped sally in the mobile devices was fixed using the trasparent background in the header and the mobile_nav.js file was created.

--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -1,8 +1,19 @@
+/*This class is added in the mobile_nav.js*/
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
+
 section#header {
+  background-color: transparent;
+  position: relative;
+  z-index: 100;
+
   header {
     padding: 1.5rem 3rem 2.25rem 3rem;
     display: flex;
     justify-content: space-between;
+
     .header__logo {
       display: flex;
       align-content: center;
@@ -24,7 +35,60 @@ section#header {
         height: 30px;
       }
       .overlay {
-        display: none;
+        overflow-y: auto;
+        transform: translate(-120vw, 0);
+        transition: 500ms ease;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #f45b69;
+        .overlay__content {
+          display: flex;
+          flex-direction: column;
+          flex-grow: 1;
+          height: 100%;
+          .overlay__header {
+            display: flex;
+            justify-content: space-between;
+            padding: 1.5rem 3rem 2.25rem 3rem;
+            .overlay__close {
+              cursor: pointer;
+            }
+            img {
+              margin: auto 0;
+              width: 35px;
+              height: 35px;
+            }
+          }
+          .overlay__links {
+            display: flex;
+            flex-grow: 1;
+            flex-direction: column;
+            text-align: center;
+            line-height: 2;
+            padding: 2rem 3rem;
+            a {
+              font-size: 3rem;
+              font-weight: 600;
+              color: white;
+              &:first-child {
+                margin-top: auto;
+              }
+              &:last-child {
+                margin-bottom: auto;
+              }
+            }
+          }
+        }
+      }
+      /*This class is added in the mobile_nav.js, it can't be change from this place 
+      because it won't work -> You can create another nested structure
+      */
+      .active {
+        display: block;
+        transform: translate(0, 0);
       }
     }
   }
